<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.Activities.signup.SignupActivity">
    <ImageView
        android:id="@+id/iv_text_pureblissy"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/pureblissy_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/arial_bold"
        android:lineSpacingExtra="0.8sp"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_please_sign_in_to_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_text_pureblissy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_please_sign_in_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:lineSpacingExtra="0.8sp"
        android:paddingHorizontal="25dp"
        android:text="Create an account to access meditations,
sleep, sounds, music to help you focus."
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/arial_regular"
        android:textStyle="normal"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_please_sign_in_to_continue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prompt_email"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prompt_password"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_c_accept"
        android:lineSpacingExtra="0.5sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/arial_regular"
        android:textStyle="normal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_rounded_orange"
        android:text="@string/action_sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_policy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_already_have_acc"
        android:lineSpacingExtra="0.5sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/arial_regular"
        android:textStyle="normal"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_signUp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>